--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
